// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video marked as sky sports 1`] = `
<div
  style={
    Object {
      "height": 200,
      "width": 300,
    }
  }
>
  <div
    style={
      Object {
        "height": 200,
        "position": "relative",
        "width": 300,
      }
    }
  >
    <video
      style={
        Object {
          "height": 200,
          "width": 300,
        }
      }
    />
  </div>
</div>
`;

exports[`2. 360 video 1`] = `
<div
  style={
    Object {
      "height": 200,
      "width": 300,
    }
  }
>
  <div
    style={
      Object {
        "height": 200,
        "position": "relative",
        "width": 300,
      }
    }
  >
    <div>
      <IconVideo360Player />
    </div>
    <video
      style={
        Object {
          "height": 200,
          "width": 300,
        }
      }
    />
  </div>
</div>
`;
